first two unit tests completed.  Makefile modified

--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -33,6 +33,14 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
+unittestresults: dominion.o rngs.o unittest1.c cardtest1.c
+	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+	./unittest1 > unittestresults.out
+	gcov dominion.c -f >> unittestresults.out
+	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
+	./cardtest1 >> unittestresults.out
+	gcov dominion.c -f >> unittestresults.out
+
 all: playdom player 
 
 clean:
