First two tests complete

--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -33,6 +33,21 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
+randomtestcard1: randomtestcard1.c dominion.o rngs.o
+	gcc -o randomtestcard1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
+	./randomtestcard1 > randomtestcard1.out
+	gcov dominion.c -f >> randomtestcard1.out
+
+randomtestcard2: randomtestcard2.c dominion.o rngs.o
+	gcc -o randomtestcard2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)
+	./randomtestcard2 > randomtestcard2.out
+	gcov dominion.c -f >> randomtestcard2.out
+
+randomtestcardadventurer: randomtestcardadventurer.c dominion.o rngs.o
+	gcc -o randomtestcardadventurer -g randomtestcardadventurer.c dominion.o rngs.o $(CFLAGS)
+	./randomtestcardadventurer > randomtestcardadventurer.out
+	gcov dominion.c -f >> randomtestcardadventurer.out
+
 all: playdom player 
 
 clean:
