Unit tests 1, 2, and 3 are complete

--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -36,6 +36,10 @@ player: player.c interface.o
 unittestresults: dominion.o rngs.o unittest1.c cardtest1.c
 	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
 	./unittest1 > unittestresults.out
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+	./unittest2 >> unittestresults.out
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+	./unittest3 >> unittestresults.out
 	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
 	./cardtest1 >> unittestresults.out
 	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o $(CFLAGS)
