--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -50,7 +50,7 @@ unittestresults: dominion.o rngs.o unittest1.c cardtest1.c
 	./cardtest3 >> unittestresults.out
 	gcc -o cardtest4 -g cardtest4.c dominion.o rngs.o $(CFLAGS)
 	./cardtest4 >> unittestresults.out
-	gcov dominion.c -f >> unittestresults.out
+	gcov dominion.c -f -b >> unittestresults.out
 
 all: playdom player 
 
