--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -36,17 +36,17 @@ player: player.c interface.o
 randomtestcard1: randomtestcard1.c dominion.o rngs.o
 	gcc -o randomtestcard1 -g randomtestcard1.c dominion.o rngs.o $(CFLAGS)
 	./randomtestcard1 > randomtestcard1.out
-	gcov dominion.c -f >> randomtestcard1.out
+	gcov dominion.c -f -b >> randomtestcard1.out
 
 randomtestcard2: randomtestcard2.c dominion.o rngs.o
 	gcc -o randomtestcard2 -g randomtestcard2.c dominion.o rngs.o $(CFLAGS)
 	./randomtestcard2 > randomtestcard2.out
-	gcov dominion.c -f >> randomtestcard2.out
+	gcov dominion.c -f -b >> randomtestcard2.out
 
-randomtestcardadventurer: randomtestcardadventurer.c dominion.o rngs.o
-	gcc -o randomtestcardadventurer -g randomtestcardadventurer.c dominion.o rngs.o $(CFLAGS)
-	./randomtestcardadventurer > randomtestcardadventurer.out
-	gcov dominion.c -f >> randomtestcardadventurer.out
+randomtestadventurer: randomtestadventurer.c dominion.o rngs.o
+	gcc -o randomtestadventurer -g randomtestadventurer.c dominion.o rngs.o $(CFLAGS)
+	./randomtestadventurer > randomtestadventurer.out
+	gcov dominion.c -f -b >> randomtestadventurer.out
 
 all: playdom player 
 
