--- a/dominion/Makefile
+++ b/dominion/Makefile
@@ -45,8 +45,8 @@ randomtestcard2: randomtestcard2.c dominion.o rngs.o
 
 randomtestadventurer: randomtestadventurer.c dominion.o rngs.o
 	gcc -o randomtestadventurer -g -D_XOPEN_SOURCE randomtestadventurer.c dominion.o rngs.o $(CFLAGS)
-	#./randomtestadventurer > randomtestcard2.out
-	#gcov dominion.c -f -b >> randomtestadventurer.out
+	./randomtestadventurer > randomtestadventurer.out
+	gcov dominion.c -f -b >> randomtestadventurer.out
 
 all: playdom player 
 
